shared layout and env loading changes

--- a/.example.env
+++ b/.example.env
@@ -3,3 +3,4 @@ FRANKIE_BFF_URL=https://backend.kycaml.uat.frankiefinancial.io
 CUSTOMER_ID=XXX
 CUSTOMER_CHILD_ID=XXX
 API_KEY=XXX
+NODE_ENV=development
