--- a/.example.env
+++ b/.example.env
@@ -3,4 +3,5 @@ FRANKIE_BFF_URL=https://backend.kycaml.uat.frankiefinancial.io
 CUSTOMER_ID=XXX
 CUSTOMER_CHILD_ID=XXX
 API_KEY=XXX
+GOOGLE_API_KEY=XXX
 NODE_ENV=development
